Complete personalized learning workflow