@@ -12,10 +12,15 @@ import com.edustudio.integration.ai.dto.AiQuizAnalyzeRequest;
 import com.edustudio.integration.ai.dto.AiQuizGenerateRequest;
 import com.edustudio.integration.ai.dto.AiQuizGenerateResponse;
 import com.edustudio.integration.ai.dto.AiQuizQuestionDTO;
+import com.edustudio.module.companion.entity.CompanionRole;
+import com.edustudio.module.companion.service.CompanionRoleService;
+import com.edustudio.module.companion.support.CompanionRolePayload;
 import com.edustudio.module.learningspace.service.LearningSpaceService;
+import com.edustudio.module.knowledge.service.KnowledgeService;
 import com.edustudio.module.modelprovider.service.ModelProviderService;
 import com.edustudio.module.profile.entity.MasteryRecord;
 import com.edustudio.module.profile.mapper.MasteryRecordMapper;
+import com.edustudio.module.profile.service.UserProfileService;
 import com.edustudio.module.profile.vo.MasteryRecordVO;
 import com.edustudio.module.quiz.dto.QuizAnswerSubmitDTO;
 import com.edustudio.module.quiz.dto.QuizGenerateRequest;
@@ -28,12 +33,16 @@ import com.edustudio.module.quiz.mapper.QuizAnswerMapper;
 import com.edustudio.module.quiz.mapper.QuizMapper;
 import com.edustudio.module.quiz.mapper.QuizQuestionMapper;
 import com.edustudio.module.quiz.service.QuizService;
+import com.edustudio.module.quiz.vo.QuizQuestionFeedbackVO;
 import com.edustudio.module.quiz.vo.QuizQuestionVO;
 import com.edustudio.module.quiz.vo.QuizResultVO;
 import com.edustudio.module.quiz.vo.QuizVO;
+import com.edustudio.module.resource.entity.GeneratedResource;
+import com.edustudio.module.resource.mapper.GeneratedResourceMapper;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
@@ -41,13 +50,17 @@ import org.springframework.util.StringUtils;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class QuizServiceImpl implements QuizService {
 
     private final QuizMapper quizMapper;
@@ -57,6 +70,10 @@ public class QuizServiceImpl implements QuizService {
     private final LearningSpaceService learningSpaceService;
     private final ModelProviderService modelProviderService;
     private final AiServiceClient aiServiceClient;
+    private final CompanionRoleService companionRoleService;
+    private final UserProfileService userProfileService;
+    private final GeneratedResourceMapper generatedResourceMapper;
+    private final KnowledgeService knowledgeService;
 
     @Override
     @Transactional(rollbackFor = Exception.class)
@@ -64,6 +81,9 @@ public class QuizServiceImpl implements QuizService {
         Long userId = LoginUserHolder.requireCurrentUserId();
         learningSpaceService.assertOwned(request.getSpaceId());
         Long providerId = modelProviderService.resolveProviderId(request.getModelProviderId());
+        CompanionRole role = resolveRole(request.getRolePlayEnabled(), request.getCompanionRoleId());
+        Map<String, Object> rolePayload = CompanionRolePayload.from(role);
+        Map<String, Object> learnerProfile = userProfileService.getAiProfile(request.getSpaceId());
         AiQuizGenerateResponse response = aiServiceClient.generateQuiz(AiQuizGenerateRequest.builder()
                 .modelConfig(modelProviderService.resolveConfig(providerId))
                 .subject(request.getSubject())
@@ -71,8 +91,15 @@ public class QuizServiceImpl implements QuizService {
                 .knowledgePoints(request.getKnowledgePoints())
                 .questionCount(request.getQuestionCount())
                 .difficulty(request.getDifficulty())
-                .questionType(request.getQuestionType())
+                .questionType("single_choice")
+                .profile(learnerProfile)
+                .rolePlayEnabled(role != null)
+                .companionRole(rolePayload)
                 .build());
+        List<AiQuizQuestionDTO> generatedQuestions = normalizeChoiceQuestions(response == null ? null : response.getQuestions());
+        if (response == null || generatedQuestions.isEmpty()) {
+            throw new BusinessException(ResultCode.INTERNAL_ERROR, "AI 服务没有返回可用的四选一题目");
+        }
         Quiz quiz = new Quiz();
         quiz.setUserId(userId);
         quiz.setSpaceId(request.getSpaceId());
@@ -80,11 +107,13 @@ public class QuizServiceImpl implements QuizService {
         quiz.setTitle(response.getTitle());
         quiz.setSubject(response.getSubject());
         quiz.setDifficulty(response.getDifficulty());
-        quiz.setQuestionCount(response.getQuestions() == null ? 0 : response.getQuestions().size());
-        quiz.setTotalScore(response.getTotalScore());
+        quiz.setQuestionCount(generatedQuestions.size());
+        quiz.setTotalScore(generatedQuestions.stream()
+                .map(AiQuizQuestionDTO::getScore)
+                .reduce(BigDecimal.ZERO, BigDecimal::add));
         quiz.setStatus("published");
         quizMapper.insert(quiz);
-        for (AiQuizQuestionDTO dto : nullSafe(response.getQuestions())) {
+        for (AiQuizQuestionDTO dto : generatedQuestions) {
             QuizQuestion question = new QuizQuestion();
             question.setQuizId(quiz.getId());
             question.setUserId(userId);
@@ -94,13 +123,66 @@ public class QuizServiceImpl implements QuizService {
             question.setOptionsJson(dto.getOptions() == null ? "[]" : JsonUtils.toJson(dto.getOptions()));
             question.setAnswerText(dto.getAnswerText());
             question.setAnalysisText(dto.getAnalysisText());
+            question.setOptionAnalysisJson(JsonUtils.toJson(dto.getOptionExplanations()));
             question.setKnowledgePoints(dto.getKnowledgePoints() == null ? "[]" : JsonUtils.toJson(dto.getKnowledgePoints()));
             question.setDifficulty(dto.getDifficulty());
             question.setScore(dto.getScore());
             question.setStatus("active");
             quizQuestionMapper.insert(question);
         }
+        GeneratedResource quizResource = createQuizResource(quiz, generatedQuestions, request.getKnowledgePoints());
+        quiz.setResourceId(quizResource.getId());
+        quizMapper.updateById(quiz);
+        knowledgeService.syncGeneratedResource(quizResource);
+        learningSpaceService.incrementResourceCount(request.getSpaceId());
+        userProfileService.recordActivity(
+                request.getSpaceId(), request.getSubject(), request.getKnowledgePoints(), List.of(), "quiz_generation");
         return detail(quiz.getId());
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void delete(Long id) {
+        Quiz quiz = getOwnedQuiz(id);
+        quizAnswerMapper.delete(new LambdaQueryWrapper<QuizAnswer>()
+                .eq(QuizAnswer::getQuizId, quiz.getId())
+                .eq(QuizAnswer::getUserId, quiz.getUserId()));
+        quizQuestionMapper.delete(new LambdaQueryWrapper<QuizQuestion>()
+                .eq(QuizQuestion::getQuizId, quiz.getId())
+                .eq(QuizQuestion::getUserId, quiz.getUserId()));
+        masteryRecordMapper.delete(new LambdaQueryWrapper<MasteryRecord>()
+                .eq(MasteryRecord::getUserId, quiz.getUserId())
+                .eq(MasteryRecord::getSpaceId, quiz.getSpaceId())
+                .eq(MasteryRecord::getLastQuizId, quiz.getId()));
+        if (quiz.getResourceId() != null) {
+            GeneratedResource resource = generatedResourceMapper.selectOne(new LambdaQueryWrapper<GeneratedResource>()
+                    .eq(GeneratedResource::getId, quiz.getResourceId())
+                    .eq(GeneratedResource::getUserId, quiz.getUserId())
+                    .eq(GeneratedResource::getDeleted, 0));
+            if (resource != null) {
+                generatedResourceMapper.deleteById(resource.getId());
+                knowledgeService.deleteGeneratedResourceIndex(resource.getId(), resource.getUserId());
+            }
+        }
+        quizMapper.deleteById(quiz);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public boolean deleteByResourceId(Long resourceId) {
+        if (resourceId == null) {
+            return false;
+        }
+        Quiz quiz = quizMapper.selectOne(new LambdaQueryWrapper<Quiz>()
+                .eq(Quiz::getResourceId, resourceId)
+                .eq(Quiz::getUserId, LoginUserHolder.requireCurrentUserId())
+                .eq(Quiz::getDeleted, 0)
+                .last("LIMIT 1"));
+        if (quiz == null) {
+            return false;
+        }
+        delete(quiz.getId());
+        return true;
     }
 
     @Override
@@ -126,50 +208,72 @@ public class QuizServiceImpl implements QuizService {
     @Transactional(rollbackFor = Exception.class)
     public QuizResultVO submit(Long id, QuizSubmitRequest request) {
         Quiz quiz = getOwnedQuiz(id);
-        Map<Long, String> answers = request.getAnswers().stream().collect(java.util.stream.Collectors.toMap(QuizAnswerSubmitDTO::getQuestionId, QuizAnswerSubmitDTO::getAnswerText, (a, b) -> b));
+        Map<Long, String> submittedAnswers = request.getAnswers().stream().collect(Collectors.toMap(QuizAnswerSubmitDTO::getQuestionId, QuizAnswerSubmitDTO::getAnswerText, (a, b) -> b));
         BigDecimal score = BigDecimal.ZERO;
         LinkedHashSet<String> weakPoints = new LinkedHashSet<>();
+        List<QuizQuestionFeedbackVO> feedbacks = new ArrayList<>();
+        List<Map<String, Object>> answerPayloads = new ArrayList<>();
         for (QuizQuestion question : questions(quiz.getId())) {
-            String answerText = answers.getOrDefault(question.getId(), "");
+            String answerText = submittedAnswers.getOrDefault(question.getId(), "");
             BigDecimal earned = grade(question, answerText);
             score = score.add(earned);
             if (earned.compareTo(question.getScore().multiply(BigDecimal.valueOf(0.6))) < 0) {
                 weakPoints.addAll(parseList(question.getKnowledgePoints()));
             }
-            upsertAnswer(quiz, question, answerText, earned);
+            QuizQuestionFeedbackVO feedback = feedbackFor(question, answerText, earned);
+            feedbacks.add(feedback);
+            answerPayloads.add(answerPayload(question, feedback));
+            upsertAnswer(quiz, question, answerText, earned, feedback.getFeedback());
             updateMastery(quiz, question, earned);
         }
         quiz.setStatus("submitted");
         quizMapper.updateById(quiz);
-        var analysis = aiServiceClient.analyzeQuiz(AiQuizAnalyzeRequest.builder()
-                .modelConfig(modelProviderService.resolveConfig(null))
-                .quizTitle(quiz.getTitle())
-                .score(score)
-                .totalScore(quiz.getTotalScore())
-                .weakPoints(weakPoints.stream().toList())
-                .answers(Collections.emptyList())
-                .build());
+
+        CompanionRole role = resolveRole(request.getRolePlayEnabled(), request.getCompanionRoleId());
+        Map<String, Object> rolePayload = CompanionRolePayload.from(role);
+        String analysisMarkdown = analyzeWithFallback(quiz, score, weakPoints.stream().toList(), answerPayloads, rolePayload);
+        userProfileService.recordActivity(
+                quiz.getSpaceId(), quiz.getSubject(), List.of(), weakPoints.stream().toList(), "assessment",
+                JsonUtils.toJson(Map.of(
+                        "quiz_title", quiz.getTitle(),
+                        "score", score,
+                        "total_score", quiz.getTotalScore(),
+                        "weak_points", weakPoints.stream().toList(),
+                        "answered_question_count", feedbacks.size()
+                )));
         return QuizResultVO.builder()
                 .quizId(quiz.getId())
                 .score(score)
                 .totalScore(quiz.getTotalScore())
                 .accuracyRate(rate(score, quiz.getTotalScore()))
                 .weakPoints(weakPoints.stream().toList())
-                .analysisMarkdown(analysis.getAnalysisMarkdown())
+                .analysisMarkdown(analysisMarkdown)
+                .questionFeedbacks(feedbacks)
                 .build();
     }
 
     @Override
     public QuizResultVO result(Long id) {
         Quiz quiz = getOwnedQuiz(id);
-        BigDecimal score = answers(quiz.getId()).stream().map(QuizAnswer::getScore).reduce(BigDecimal.ZERO, BigDecimal::add);
+        Map<Long, QuizAnswer> savedAnswers = answers(quiz.getId()).stream()
+                .collect(Collectors.toMap(QuizAnswer::getQuestionId, answer -> answer, (a, b) -> b));
+        List<QuizQuestionFeedbackVO> feedbacks = questions(quiz.getId()).stream()
+                .map(question -> feedbackFor(question, savedAnswers.get(question.getId())))
+                .toList();
+        BigDecimal score = savedAnswers.values().stream().map(QuizAnswer::getScore).reduce(BigDecimal.ZERO, BigDecimal::add);
+        List<String> weakPoints = feedbacks.stream()
+                .filter(item -> item.getScore() != null && item.getFullScore() != null && item.getScore().compareTo(item.getFullScore().multiply(BigDecimal.valueOf(0.6))) < 0)
+                .flatMap(item -> nullSafe(item.getKnowledgePoints()).stream())
+                .distinct()
+                .toList();
         return QuizResultVO.builder()
                 .quizId(quiz.getId())
                 .score(score)
                 .totalScore(quiz.getTotalScore())
                 .accuracyRate(rate(score, quiz.getTotalScore()))
-                .weakPoints(Collections.emptyList())
-                .analysisMarkdown("已根据当前保存答案生成测验结果。")
+                .weakPoints(weakPoints)
+                .analysisMarkdown(fallbackAnalysis(quiz, score, weakPoints))
+                .questionFeedbacks(feedbacks)
                 .build();
     }
 
@@ -179,11 +283,15 @@ public class QuizServiceImpl implements QuizService {
     }
 
     @Override
-    public List<MasteryRecordVO> mastery() {
+    public List<MasteryRecordVO> mastery(Long spaceId) {
         Long userId = LoginUserHolder.requireCurrentUserId();
+        if (spaceId != null) {
+            learningSpaceService.assertOwned(spaceId);
+        }
         return masteryRecordMapper.selectList(new LambdaQueryWrapper<MasteryRecord>()
                         .eq(MasteryRecord::getUserId, userId)
                         .eq(MasteryRecord::getDeleted, 0)
+                        .eq(spaceId != null, MasteryRecord::getSpaceId, spaceId)
                         .orderByAsc(MasteryRecord::getMasteryLevel))
                 .stream().map(this::toMasteryVO).toList();
     }
@@ -192,17 +300,12 @@ public class QuizServiceImpl implements QuizService {
         if (!StringUtils.hasText(answerText)) {
             return BigDecimal.ZERO;
         }
-        String normalized = answerText.trim();
-        if ("single_choice".equals(question.getQuestionType()) || "judge".equals(question.getQuestionType())) {
-            return normalized.equalsIgnoreCase(question.getAnswerText().trim()) ? question.getScore() : BigDecimal.ZERO;
-        }
-        List<String> keywords = List.of(question.getAnswerText().split("\\s+"));
-        long matched = keywords.stream().filter(keyword -> StringUtils.hasText(keyword) && normalized.contains(keyword)).count();
-        BigDecimal ratio = keywords.isEmpty() ? BigDecimal.valueOf(0.6) : BigDecimal.valueOf(matched).divide(BigDecimal.valueOf(keywords.size()), 2, RoundingMode.HALF_UP);
-        return question.getScore().multiply(ratio.max(BigDecimal.valueOf(0.4))).setScale(2, RoundingMode.HALF_UP);
+        String submitted = normalizeChoiceAnswer(answerText);
+        String correct = normalizeChoiceAnswer(question.getAnswerText());
+        return submitted.equalsIgnoreCase(correct) ? question.getScore() : BigDecimal.ZERO;
     }
 
-    private void upsertAnswer(Quiz quiz, QuizQuestion question, String answerText, BigDecimal earned) {
+    private void upsertAnswer(Quiz quiz, QuizQuestion question, String answerText, BigDecimal earned, String feedbackText) {
         QuizAnswer answer = quizAnswerMapper.selectOne(new LambdaQueryWrapper<QuizAnswer>()
                 .eq(QuizAnswer::getQuizId, quiz.getId())
                 .eq(QuizAnswer::getQuestionId, question.getId())
@@ -217,7 +320,7 @@ public class QuizServiceImpl implements QuizService {
         answer.setAnswerText(answerText);
         answer.setScore(earned);
         answer.setIsCorrect(earned.compareTo(question.getScore()) >= 0);
-        answer.setFeedbackText(question.getAnalysisText());
+        answer.setFeedbackText(feedbackText);
         answer.setSubmittedAt(LocalDateTime.now());
         answer.setStatus("submitted");
         if (answer.getId() == null) {
@@ -255,6 +358,95 @@ public class QuizServiceImpl implements QuizService {
                 masteryRecordMapper.updateById(record);
             }
         }
+    }
+
+    private QuizQuestionFeedbackVO feedbackFor(QuizQuestion question, String answerText, BigDecimal earned) {
+        boolean correct = earned.compareTo(question.getScore()) >= 0;
+        String feedback;
+        if (!StringUtils.hasText(answerText)) {
+            feedback = "本题还没有作答，建议先回到对应知识点补一个最小例题。";
+        } else {
+            feedback = correct ? "选择正确，说明你已经抓住了本题的核心判断。" : "答案不完全正确，先对照解析复盘概念边界。";
+        }
+        return QuizQuestionFeedbackVO.builder()
+                .questionId(question.getId())
+                .questionOrder(question.getQuestionOrder())
+                .stem(question.getStem())
+                .options(parseList(question.getOptionsJson()))
+                .answerText(answerText)
+                .correctAnswer(question.getAnswerText())
+                .score(earned)
+                .fullScore(question.getScore())
+                .correct(correct)
+                .knowledgePoints(parseList(question.getKnowledgePoints()))
+                .feedback(feedback)
+                .optionExplanations(parseStringMap(question.getOptionAnalysisJson()))
+                .build();
+    }
+
+    private QuizQuestionFeedbackVO feedbackFor(QuizQuestion question, QuizAnswer answer) {
+        String answerText = answer == null ? "" : answer.getAnswerText();
+        BigDecimal earned = answer == null || answer.getScore() == null ? BigDecimal.ZERO : answer.getScore();
+        QuizQuestionFeedbackVO base = feedbackFor(question, answerText, earned);
+        if (answer != null && StringUtils.hasText(answer.getFeedbackText())) {
+            base.setFeedback(answer.getFeedbackText());
+        }
+        return base;
+    }
+
+    private Map<String, Object> answerPayload(QuizQuestion question, QuizQuestionFeedbackVO feedback) {
+        Map<String, Object> payload = new LinkedHashMap<>();
+        payload.put("question_id", question.getId());
+        payload.put("question_order", question.getQuestionOrder());
+        payload.put("question_type", question.getQuestionType());
+        payload.put("stem", question.getStem());
+        payload.put("options", feedback.getOptions());
+        payload.put("student_answer", feedback.getAnswerText());
+        payload.put("correct_answer", question.getAnswerText());
+        payload.put("score", feedback.getScore());
+        payload.put("full_score", feedback.getFullScore());
+        payload.put("knowledge_points", feedback.getKnowledgePoints());
+        payload.put("rule_feedback", feedback.getFeedback());
+        payload.put("option_explanations", feedback.getOptionExplanations());
+        return payload;
+    }
+
+    private String analyzeWithFallback(Quiz quiz, BigDecimal score, List<String> weakPoints, List<Map<String, Object>> answerPayloads, Map<String, Object> rolePayload) {
+        try {
+            var analysis = aiServiceClient.analyzeQuiz(AiQuizAnalyzeRequest.builder()
+                    .modelConfig(modelProviderService.resolveConfig(null))
+                    .quizTitle(quiz.getTitle())
+                    .score(score)
+                    .totalScore(quiz.getTotalScore())
+                    .weakPoints(weakPoints)
+                    .answers(answerPayloads)
+                    .profile(userProfileService.getAiProfile(quiz.getSpaceId()))
+                    .rolePlayEnabled(!rolePayload.isEmpty())
+                    .companionRole(rolePayload)
+                    .build());
+            if (analysis == null || !StringUtils.hasText(analysis.getAnalysisMarkdown())) {
+                throw new IllegalStateException("AI 测验分析未返回有效内容");
+            }
+            return analysis.getAnalysisMarkdown();
+        } catch (RuntimeException exception) {
+            log.warn("quiz_analysis_fallback quizId={} reason={}", quiz.getId(), exception.getMessage());
+            return fallbackAnalysis(quiz, score, weakPoints) + "\n\n> AI 语义分析暂时不可用，已保留规则评分和逐题反馈。";
+        }
+    }
+
+    private String fallbackAnalysis(Quiz quiz, BigDecimal score, List<String> weakPoints) {
+        String weak = weakPoints == null || weakPoints.isEmpty() ? "暂未发现明显薄弱点" : String.join("、", weakPoints);
+        return "## 测验反馈\n\n"
+                + "- 得分：" + score + " / " + quiz.getTotalScore() + "\n"
+                + "- 薄弱点：" + weak + "\n\n"
+                + "下一步建议：先复盘低分题，再围绕薄弱点生成一组 5 题小测。";
+    }
+
+    private CompanionRole resolveRole(Boolean enabled, Long roleId) {
+        if (!Boolean.TRUE.equals(enabled)) {
+            return null;
+        }
+        return companionRoleService.getOwnedActiveRole(roleId);
     }
 
     private Quiz getOwnedQuiz(Long id) {
@@ -309,6 +501,7 @@ public class QuizServiceImpl implements QuizService {
                 .options(parseJson(question.getOptionsJson()))
                 .answerText(question.getAnswerText())
                 .analysisText(question.getAnalysisText())
+                .optionExplanations(parseJson(question.getOptionAnalysisJson()))
                 .knowledgePoints(parseJson(question.getKnowledgePoints()))
                 .difficulty(question.getDifficulty())
                 .score(question.getScore())
@@ -343,6 +536,144 @@ public class QuizServiceImpl implements QuizService {
     }
 
     private <T> List<T> nullSafe(List<T> values) {
-        return values == null ? Collections.emptyList() : values;
+        return values == null ? List.of() : values;
+    }
+
+    private List<AiQuizQuestionDTO> normalizeChoiceQuestions(List<AiQuizQuestionDTO> questions) {
+        List<AiQuizQuestionDTO> normalized = new ArrayList<>();
+        int order = 1;
+        for (AiQuizQuestionDTO question : nullSafe(questions)) {
+            if (question == null || !StringUtils.hasText(question.getStem())) {
+                continue;
+            }
+            List<String> options = normalizeOptions(question.getOptions());
+            String answer = normalizeChoiceAnswer(question.getAnswerText());
+            if (options.size() != 4 || !List.of("A", "B", "C", "D").contains(answer)) {
+                continue;
+            }
+            question.setQuestionOrder(order++);
+            question.setQuestionType("single_choice");
+            question.setOptions(options);
+            question.setAnswerText(answer);
+            question.setAnalysisText(StringUtils.hasText(question.getAnalysisText())
+                    ? question.getAnalysisText()
+                    : "结合题干概念逐项排除，并说明正确选项成立的条件。");
+            question.setOptionExplanations(normalizeOptionExplanations(
+                    question.getOptionExplanations(), answer, options, question.getAnalysisText()));
+            question.setKnowledgePoints(question.getKnowledgePoints() == null ? List.of() : question.getKnowledgePoints());
+            question.setDifficulty(StringUtils.hasText(question.getDifficulty()) ? question.getDifficulty() : "medium");
+            question.setScore(question.getScore() == null || question.getScore().compareTo(BigDecimal.ZERO) <= 0
+                    ? BigDecimal.TEN
+                    : question.getScore());
+            normalized.add(question);
+        }
+        return normalized;
+    }
+
+    private List<String> normalizeOptions(List<String> options) {
+        if (options == null || options.size() != 4) {
+            return List.of();
+        }
+        List<String> normalized = new ArrayList<>();
+        String[] labels = {"A", "B", "C", "D"};
+        for (int index = 0; index < labels.length; index++) {
+            String value = options.get(index) == null ? "" : options.get(index).trim();
+            value = value.replaceFirst("^[A-Da-d][\\.、:：\\)）]\\s*", "");
+            if (!StringUtils.hasText(value)) {
+                return List.of();
+            }
+            normalized.add(labels[index] + ". " + value);
+        }
+        return normalized;
+    }
+
+    private String normalizeChoiceAnswer(String answer) {
+        if (!StringUtils.hasText(answer)) {
+            return "";
+        }
+        String normalized = answer.trim().toUpperCase();
+        return normalized.matches("^[A-D].*") ? normalized.substring(0, 1) : normalized;
+    }
+
+    private Map<String, String> normalizeOptionExplanations(Map<String, String> raw, String correctAnswer,
+                                                             List<String> options, String analysisText) {
+        Map<String, String> explanations = new LinkedHashMap<>();
+        String[] labels = {"A", "B", "C", "D"};
+        for (int index = 0; index < labels.length; index++) {
+            String label = labels[index];
+            String explanation = raw == null ? null : raw.get(label);
+            if (!StringUtils.hasText(explanation)) {
+                String optionText = options.get(index).replaceFirst("^[A-D][.]\\s*", "");
+                explanation = label.equals(correctAnswer)
+                        ? "正确。“" + optionText + "”符合题干要求。" + analysisText
+                        : "错误。“" + optionText + "”不满足题干的关键条件，应与正确选项 " + correctAnswer + " 对照理解。";
+            }
+            explanations.put(label, explanation.trim());
+        }
+        return explanations;
+    }
+
+    private Map<String, String> parseStringMap(String json) {
+        if (!StringUtils.hasText(json)) {
+            return Collections.emptyMap();
+        }
+        try {
+            return JsonUtils.fromJson(json, new TypeReference<Map<String, String>>() {});
+        } catch (RuntimeException ignored) {
+            return Collections.emptyMap();
+        }
+    }
+
+    private GeneratedResource createQuizResource(Quiz quiz, List<AiQuizQuestionDTO> questions,
+                                                   List<String> requestedPoints) {
+        GeneratedResource resource = new GeneratedResource();
+        resource.setUserId(quiz.getUserId());
+        resource.setSpaceId(quiz.getSpaceId());
+        resource.setResourceType("quiz_set");
+        resource.setTitle(quiz.getTitle());
+        resource.setSubject(quiz.getSubject());
+        List<String> points = new ArrayList<>();
+        if (requestedPoints != null) {
+            requestedPoints.stream().filter(StringUtils::hasText).map(String::trim).forEach(points::add);
+        }
+        questions.stream()
+                .flatMap(question -> nullSafe(question.getKnowledgePoints()).stream())
+                .filter(StringUtils::hasText)
+                .map(String::trim)
+                .forEach(points::add);
+        List<String> distinctPoints = points.stream().distinct().toList();
+        resource.setKnowledgePoints(JsonUtils.toJson(distinctPoints));
+        resource.setContentMarkdown(quizResourceMarkdown(quiz, questions, distinctPoints));
+        resource.setContentJson(JsonUtils.toJson(Map.of(
+                "quizId", quiz.getId(),
+                "spaceId", quiz.getSpaceId(),
+                "questionCount", questions.size(),
+                "launchPath", "/quiz?spaceId=" + quiz.getSpaceId() + "&quizId=" + quiz.getId()
+        )));
+        resource.setOutputSummary("包含 " + questions.size() + " 道四选一题，可在学习测验中作答并查看逐项解析。");
+        resource.setQualityScore(BigDecimal.valueOf(90));
+        resource.setExportStatus("interactive");
+        resource.setStatus("active");
+        generatedResourceMapper.insert(resource);
+        return resource;
+    }
+
+    private String quizResourceMarkdown(Quiz quiz, List<AiQuizQuestionDTO> questions, List<String> points) {
+        StringBuilder markdown = new StringBuilder()
+                .append("# ").append(quiz.getTitle()).append("\n\n")
+                .append("> 本测验已保存在当前学习空间。请在“学习测验”中作答，提交后可查看每个选项的解释。\n\n")
+                .append("- 学科：").append(quiz.getSubject()).append("\n")
+                .append("- 难度：").append(quiz.getDifficulty()).append("\n")
+                .append("- 题目数：").append(questions.size()).append("\n")
+                .append("- 知识点：").append(points.isEmpty() ? "综合复习" : String.join("、", points)).append("\n\n")
+                .append("## 题目预览\n\n");
+        for (AiQuizQuestionDTO question : questions) {
+            markdown.append(question.getQuestionOrder()).append(". ").append(question.getStem()).append("\n\n");
+            for (String option : nullSafe(question.getOptions())) {
+                markdown.append("   - ").append(option).append("\n");
+            }
+            markdown.append("\n");
+        }
+        return markdown.toString();
     }
 }
